// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Gabapentin Integration Test parses gabapentin 1`] = `
{
  "components": [
    {
      "atoms": "C",
      "attachments": {
        "4": [
          {
            "atoms": [
              "C",
              "C",
              "O",
            ],
            "attachments": {
              "2": [
                {
                  "atoms": [
                    "O",
                  ],
                  "attachments": {},
                  "bonds": [
                    "=",
                  ],
                  "type": "linear",
                },
              ],
            },
            "bonds": [
              null,
              null,
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "C",
        "N",
      ],
      "attachments": {},
      "bonds": [
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Gabapentin Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Ring({ atoms: 'C', size: 6, branchDepths: [0, 0, 0, 0, 1, 1] });
export const v2 = Linear(['C', 'C', 'O']);
export const v3 = Linear(['O'], ['=']);
export const v4 = v2.attach(v3, 2);
export const v5 = v1.attach(v4, 4, { sibling: true });
export const v6 = Linear(['C', 'N']);
export const v7 = Molecule([v5, v6]);"
`;

exports[`Pregabalin Integration Test parses pregabalin 1`] = `
{
  "atoms": [
    "C",
    "C",
    "C",
    "C",
    "C",
    "N",
  ],
  "attachments": {
    "2": [
      {
        "atoms": [
          "C",
        ],
        "attachments": {},
        "bonds": [
          null,
        ],
        "type": "linear",
      },
    ],
    "4": [
      {
        "atoms": [
          "C",
          "C",
          "O",
        ],
        "attachments": {
          "2": [
            {
              "atoms": [
                "O",
              ],
              "attachments": {},
              "bonds": [
                "=",
              ],
              "type": "linear",
            },
          ],
        },
        "bonds": [
          null,
          null,
          null,
        ],
        "type": "linear",
      },
    ],
  },
  "bonds": [
    null,
    null,
    null,
    null,
    null,
  ],
  "type": "linear",
}
`;

exports[`Pregabalin Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C', 'N']);
export const v2 = Linear(['C']);
export const v3 = v1.attach(v2, 2);
export const v4 = Linear(['C', 'C', 'O']);
export const v5 = Linear(['O'], ['=']);
export const v6 = v4.attach(v5, 2);
export const v7 = v3.attach(v6, 4);"
`;

exports[`Amitriptyline Integration Test parses amitriptyline 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "N",
        "C",
        "C",
        "C",
      ],
      "attachments": {
        "2": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            "=",
            null,
            null,
            null,
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 11,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 1,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 5,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Amitriptyline Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'N', 'C', 'C', 'C']);
export const v2 = Linear(['C']);
export const v3 = v1.attach(v2, 2);
export const v4 = Ring({ atoms: 'C', size: 11, bonds: [null, '=', null, null, null, '=', null, '=', null, '=', null] });
export const v5 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 1, bonds: ['=', null, '=', null, '=', null] });
export const v6 = Ring({ atoms: 'C', size: 6, ringNumber: 3, offset: 5, bonds: ['=', null, '=', null, '=', null] });
export const v7 = FusedRing([v4, v5, v6], { leadingBond: '=' });
export const v8 = Molecule([v3, v7]);"
`;

exports[`Duloxetine Integration Test parses duloxetine 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "N",
        "C",
        "C",
        "C",
        "O",
      ],
      "attachments": {
        "5": [
          {
            "atoms": "C",
            "attachments": {},
            "bonds": [
              "=",
              null,
              "=",
              null,
              null,
            ],
            "offset": 0,
            "ringNumber": 1,
            "size": 5,
            "substitutions": {
              "5": "S",
            },
            "type": "ring",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 2,
          "size": 10,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 4,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
  ],
  "type": "molecule",
}
`;

exports[`Duloxetine Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'N', 'C', 'C', 'C', 'O']);
export const v2 = Ring({ atoms: 'C', size: 5, bonds: ['=', null, '=', null, null] });
export const v3 = v2.substitute(5, 'S');
export const v4 = v1.attach(v3, 5);
export const v5 = Ring({ atoms: 'C', size: 10, ringNumber: 2, bonds: ['=', null, '=', null, '=', null, '=', null, '=', null] });
export const v6 = Ring({ atoms: 'C', size: 6, ringNumber: 3, offset: 4, bonds: ['=', null, '=', null, '=', null] });
export const v7 = v5.fuse(v6, 4);
export const v8 = Molecule([v4, v7]);"
`;

exports[`Carbamazepine Integration Test parses carbamazepine 1`] = `
{
  "components": [
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            null,
            "=",
            null,
            "=",
            null,
            null,
          ],
          "offset": 3,
          "ringNumber": 2,
          "size": 7,
          "substitutions": {
            "7": "N",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            "=",
            null,
            "=",
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "C",
        "N",
      ],
      "attachments": {
        "1": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              "=",
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
      ],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Carbamazepine Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 0, 0, 0, 1] });
v1.metaPositions = [0, 1, 2, 3, 4, 5];
v1.metaStart = 0;
v1.metaEnd = 5;
export const v2 = Ring({ atoms: 'C', size: 7, ringNumber: 2, offset: 3, bonds: [null, null, '=', null, '=', null, null] });
v2.metaPositions = [3, 4, 6, 7, 8, 13, 14];
v2.metaStart = 3;
v2.metaEnd = 14;
export const v3 = Ring({ atoms: 'C', size: 6, ringNumber: 3, bonds: ['=', null, '=', null, '=', null] });
v3.metaPositions = [8, 9, 10, 11, 12, 13];
v3.metaStart = 8;
v3.metaEnd = 13;
export const v4 = FusedRing([v1, v2, v3], { skipPositionComputation: true });
v4.metaTotalAtoms = 15;
v4.metaAllPositions = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14];
v4.metaSequentialRings = [];
v4.metaBranchDepthMap = new Map([[0, 0], [1, 0], [2, 0], [3, 0], [4, 0], [5, 1], [6, 0], [7, 0], [8, 0], [9, 0], [10, 0], [11, 0], [12, 0], [13, 0], [14, 0]]);
v4.metaParentIndexMap = new Map([[0, null], [1, null], [2, null], [3, null], [4, null], [5, 4], [6, null], [7, null], [8, null], [9, null], [10, null], [11, null], [12, null], [13, null], [14, null]]);
v4.metaAtomValueMap = new Map([[0, 'C'], [1, 'C'], [2, 'C'], [3, 'C'], [4, 'C'], [5, 'C'], [6, 'C'], [7, 'C'], [8, 'C'], [9, 'C'], [10, 'C'], [11, 'C'], [12, 'C'], [13, 'C'], [14, 'N']]);
v4.metaBondMap = new Map([[0, null], [1, '='], [2, null], [3, '='], [4, null], [5, '='], [6, null], [7, '='], [8, null], [9, '='], [10, null], [11, '='], [12, null], [13, '='], [14, null]]);
v4.metaRingOrderMap = new Map([[0, [1, 1]], [1, [1]], [2, [1]], [3, [2, 1, 2]], [4, [1, 2]], [5, [1]], [6, [2]], [7, [2]], [8, [3, 3, 2]], [9, [3]], [10, [3]], [11, [3]], [12, [3]], [13, [3, 2]], [14, [2]]]);
v4.metaSeqAtomAttachments = new Map();
export const v5 = Linear(['C', 'N']);
export const v6 = Linear(['O'], ['=']);
export const v7 = v5.attach(v6, 1);
export const v8 = Molecule([v4, v7]);"
`;

exports[`Valproic Acid Integration Test parses valproic acid 1`] = `
{
  "atoms": [
    "C",
    "C",
    "C",
    "C",
    "C",
    "O",
  ],
  "attachments": {
    "4": [
      {
        "atoms": [
          "C",
          "C",
          "C",
        ],
        "attachments": {},
        "bonds": [
          null,
          null,
          null,
        ],
        "type": "linear",
      },
    ],
    "5": [
      {
        "atoms": [
          "O",
        ],
        "attachments": {},
        "bonds": [
          "=",
        ],
        "type": "linear",
      },
    ],
  },
  "bonds": [
    null,
    null,
    null,
    null,
    null,
  ],
  "type": "linear",
}
`;

exports[`Valproic Acid Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C', 'O']);
export const v2 = Linear(['C', 'C', 'C']);
export const v3 = v1.attach(v2, 4);
export const v4 = Linear(['O'], ['=']);
export const v5 = v3.attach(v4, 5);"
`;
